alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -6,44 +6,29 @@ body {
   font-family: "Poppins", sans-serif !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 input {
   height: 0.5rem !important ;
   font-size: 0.9rem !important;
+}
+
+.header {
+  font-size: 1.25rem;
+  margin-bottom: 0;
+}
+
+.sub-header {
+  font-size: 1.1rem;
+  margin-bottom: 0;
+}
+
+.default-text {
+  font-size: 0.85rem;
+  margin-bottom: 0;
+}
+
+.small-text {
+  font-size: 0.75rem;
+  margin-bottom: 0;
 }
 
 .small-font {
